# stuPETER12138.github.io

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CHANGELOG_en.md  Cargo.toml  LICENSE  README.md  README_en.md  build.py  config.toml  config.typ  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/: .templatesyncignore
article/: index.html
assets/: 404.html-BG-5iUaT.js  404.html-CPkVSu3w.js  DS-MoE.html-B8W0Hsxm.js  DS-MoE.html-CzYc1a1L.js  Tutor.html-BKQqi5wJ.js  app--oeoz7HY.js  app-BA_GiKEH.js  back-to-top.js  code-blocks.js  custom.css  format-headings.js  index.html-0oBDURfs.js  index.html-64Nqyq7Z.js  index.html-B0E6dDeJ.js  index.html-B1E6kwVM.js  index.html-B5gBw8BO.js  index.html-BAwEuiQP.js  index.html-BGVLr25Q.js  index.html-BRKDhqPc.js  index.html-BVj9j3dj.js  index.html-BcGTYoTR.js  index.html-Bcav5awd.js  index.html-Be4BYCCX.js  index.html-Bi8MEGGI.js  index.html-BjBMzCbo.js  index.html-BrI7Zey-.js  index.html-Bsd5dMyl.js  index.html-Bzpi7V5U.js  index.html-C6pt5UD0.js  index.html-CCEr404e.js  index.html-CKyI9OJ-.js  index.html-CgqIN-pu.js  index.html-CjcLpooJ.js  index.html-Clbr1DAA.js  index.html-Csot58kt.js  index.html-DXbziB62.js  index.html-DYSvDMtp.js  index.html-DnEkBMcm.js  index.html-DovKKaFY.js  index.html-Dw5lx4Tz.js  (+23 more)
category/: index.html
content/: experience.md  index.md  index.typ  publication.md
docs/: README.md  index.md
hope_docs/: README.md
moving/: index.html
src/: README.md  builder.rs  config.rs  deps.rs  feed.rs  html_meta.rs  main.rs  preview.rs  stats.rs  typst.rs
star/: index.html
tag/: index.html
(+102 files in other folders)
