[package]
name = "stu_peter_12138_github_io"
description = "build my typst site by RUST."
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stuPETER12138_github_io"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "=4.6.1", features = ["derive"] }
regex = "1.12.3"
walkdir = "2.5.0"
